# atlas

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL.md  README.md  pyproject.toml
.github/workflows/: build.yml  build_conda.yaml  build_package.yaml  build_wheel.yaml
apps/: CMakeLists.txt  main.cpp  main2.cpp
docs/: Doxyfile  doxyparse.py
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst  troubleshoot.rst
docs/source/api/: api_cpp.rst  api_python.rst  apindex.rst
include/: camera.h  color.h  dataset.h  dcm.h  dem.h  pixel.h  pool.h  raster.h  renderer.h  settings.h  utils.h  vec2.h  vec3.h  world.h
include/arcadia/: affine.h  arcadia.h  camera.h  crsutils.h  dem.h  dom.h  pixel.h  raster.h  ray.h  renderer.h  settings.h  utils.h  vec2.h  vec3.h  world.h
include/atlas/: affine.h  atlas.h  camera.h  dcm.h  dem.h  dom.h  grid.h  pixel.h  pool.h  raster.h  ray.h  renderer.h  settings.h  types.h  utils.h  vec2.h  vec3.h  world.h
python/: CMakeLists.txt  affine.cpp  arcadia.cpp  atlas.cpp  camera.cpp  dcm.cpp  dem.cpp  dom.cpp  grid.cpp  pixel.cpp  pyarcadia.cpp  pyatlas.cpp  raster.cpp  ray.cpp  renderer.cpp  settings.cpp  vec2.cpp  vec3.cpp  world.cpp
python/arcadia/: __init__.py
python/atlas/: __init__.py
recipe/: build.sh  meta.yaml
src/: CMakeLists.txt  affine.cpp  arcadia.cpp  atlas.cpp  camera.cpp  color.cpp  crsutils.cpp  dataset.cpp  dcm.cpp  dem.cpp  dom.cpp  ex1.cpp  grid.cpp  main.cpp  pixel.cpp  pool.cpp  raster.cpp  ray.cpp  renderer.cpp  settings.cpp  utils.cpp  vec2.cpp  vec3.cpp  world.cpp
